# biochem-research-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PRODUCT.md  README.md  compose.yml  pyproject.toml  requirements-dev.txt
airflow/: Dockerfile  entrypoint.sh  requirements.txt
airflow/dags/: arxiv_ingest.py
airflow/dags/arxiv_ingestion/: common.py  fetching.py  indexing.py  reporting.py
api/: Dockerfile  main.py  requirements.txt
postgres/: init-airflow-db.sql
src/: config.py  dependencies.py  exceptions.py
src/db/: factory.py  session.py
src/db/interfaces/: base.py  postgresql.py
src/models/: paper.py
src/repositories/: paper.py
src/routers/: agentic_ask.py  ask.py  health.py  papers.py  search.py
src/schemas/: ollama.py
src/schemas/api/: ask.py  health.py  papers.py  search.py
src/schemas/arxiv/: paper.py
src/schemas/database/: config.py
src/schemas/embeddings/: jina.py
src/schemas/indexing/: models.py
src/schemas/pdf_parser/: models.py
src/services/: arxiv_client.py  cache_client.py  chunker.py  jina_client.py  langfuse_client.py  ollama_client.py  pdf_processor.py  qdrant_client.py
src/services/agents/: __init__.py  agentic_rag.py  factory.py  prompts.py
src/services/arxiv/: client.py  factory.py
src/services/cache/: client.py  factory.py
src/services/jina/: client.py  factory.py
src/services/langfuse/: client.py  factory.py  tracer.py
src/services/ollama/: client.py  factory.py  prompts.py
src/services/pdf_parser/: factory.py  parser.py
tests/api/: conftest.py
(+12 files in other folders)
