[project]
name = "biochem-research-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "sqlalchemy==2.0.40",
    "psycopg2-binary==2.9.10",
    "arxiv==2.1.3",
    "qdrant-client==1.17.1",
    "fastembed==0.7.4",
    "httpx==0.28.1",
    "redis==7.4.0",
    "langfuse==4.5.0",
    "pydantic-settings==2.14.0",
]

[project.optional-dependencies]
pdf = [
    "docling==2.91.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "ruff==0.15.11",
    "mypy==1.20.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
